added div tags for cards

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>    
 </head>
 <body>
-    <h1>Top 10 Internet Criminals</h1>
+    <header>
+        <h1>Top 10 Internet Criminals</h1>
+    </header>
+
+    <nav></nav>
+    
+    <main>
+        <div id='crimOne'>
+            <div class='photo' id='crimOne--photo'></div>
+            <div class='info' id='crimOne--info'></div>
+        </div>
+    </main>
+    
+    <footer></footer>
+
 <script src='main.js'></script></body>
 </html>
