js creates cards for each element in array

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <nav></nav>
     
     <main>
-        <div id='crimOne'>
-            <div class='photo' id='crimOne--photo'></div>
-            <div class='info' id='crimOne--info'></div>
+        <div id=wanted>
+            <!-- <div id='crimOne'>
+                <div class='photo' id='crimOne--photo'></div>
+                <div class='info' id='crimOne--info'></div>
+            </div> -->
         </div>
     </main>
     
